--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -79,10 +79,10 @@
                                                 <div class="row-fluid hidden-phone dropdown-div-margin">
                                                     <div class="span11 margin-top-athome-nav dropdown-link-margin-left pull-right">
                                                         <ul class="nav pull-right inline">
-                                                            <li><a href="@Url.Action("login", "User")"><b>Login here</b></a></li>
+                                                            <li><a href="@Url.Action("login", "User")">Existing user <b><u>Login</u></b> here </a></li>
                                                             <li><a href="#">|</a></li>
                                                             <li class="dropdown">
-                                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Signup</b><b class="caret"></b></a>
+                                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">New to Mirai Consult&#8482;?  <b><u>Signup</u></b> here <b class="caret"></b></a>
                                                                 <ul class="dropdown-menu" style="margin-right:5%">
                                                                     <li><a href="@Url.Action("PatientSignUp", "User")"><i class="icon-user"></i>Signup as Patient</a></li>
                                                                     <li class="divider"></li>
