--- a/MiraiConsultMVC/Views/admin/QuestionList.cshtml
+++ b/MiraiConsultMVC/Views/admin/QuestionList.cshtml
@@ -90,7 +90,7 @@
                     contentType: "application/json; charset=utf-8",
                     success: function (response) {
                         alert(response);
-                        window.location.href = "admin";
+                        window.location.href = "admin-questions";
                     },
                     error: function () {
                         alert("Error");
