home page ask question count issue is resolved

--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -151,8 +151,12 @@
                 var charCode = (evt.which) ? evt.which : event.keyCode
                 if (charCode == 13) {
                     var session = '@Session["UserType"]';
-                    if (session != null && session == 2)
+                    if (session != null && session == 2) {
+                        window.location.href = "../Patients/AskDoctor?question=" + encodeURIComponent(x.value);
+                    }
+                    else {
                         window.location.href = "/similar-questions?question=" + encodeURIComponent(x.value);
+                    }
                     return false;
                 }
                 return true;
