Menu highlighter is working properly

--- a/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
@@ -227,14 +227,14 @@
         if (refUrl.indexOf("answers") >= 0 || refUrl.indexOf("Doctor-Answers") >= 0) {
             $(".navigation li.active").removeClass("active");
             $('#liAdminFeed').addClass("active");
-            $('#liFeed').addClass("active"); liDocFeed
+            $('#liFeed').addClass("active"); 
             $('#liDocFeed').addClass("active");
         }
         else if (refUrl.indexOf("similar-Questions") >= 0) {
             $(".navigation li.active").removeClass("active");
             $('#liSimilarQuestions').addClass("active");
         }
-        else if (refUrl.indexOf("Myactivity") >= 0) {
+        else if (refUrl.indexOf("my-activity") >= 0) {
             $(".navigation li.active").removeClass("active");
             $('#liMyActivity').addClass("active");
         }
