fixed tag value not get cleared

--- a/MiraiConsultMVC/Views/admin/ManageTag.cshtml
+++ b/MiraiConsultMVC/Views/admin/ManageTag.cshtml
@@ -95,6 +95,7 @@
                     alert("Tag removed successfully");
                     IEReload();
                     if (searchVal.length > 0) {
+                        $("#txtSearchTag").val('');
                         window.location.reload();
                     }
                 },
