--- a/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
@@ -266,6 +266,9 @@
         evt = (evt) ? evt : window.event;
         var len = $(txt).val().length;
         var charCode = (evt.which) ? evt.which : evt.keyCode;
+        if (charCode == 8 || charCode == 39 || charCode == 37 || charCode == 46) {
+            return true;
+        }
         if ((charCode > 31 && (charCode < 48 || charCode > 57)) || len >= num) {
             return false;
         }
