--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -9,10 +9,10 @@
         <div class="ask-question-div row-fluid hidden-phone">
             <div class="innerdivborders span12">
                 <div class="ask-question-div-title">
-                    <p class="div-title-firstp">
+                    @*<p class="div-title-firstp">
                         Do you have any health related questions?
-                    </p>
-                    <p class="div-title-firsts div-padding">Ask a Doctor</p>
+                    </p>*@
+                    <p class="div-title-firsts div-padding padding-askdoctor">Ask Doctors</p>
                 </div>
                 <textarea class="input-block-level Questiontextarea div-askdoctor-padding" id="txtAreaQuestion" onkeyup="Count(this)"
                           placeholder="Type your question here" rows="6" cols="15" maxlength="200" onkeypress="return isEnterPress(event, this);" style="width:100%"></textarea>
@@ -20,22 +20,22 @@
             </div>
             <div class="row-fluid">
                 <div class="span12">
-                    <div class="span8 center_align">
-                        <input class="btn thanx home-send-btn" onclick="sendQuestion()" type="button" name="usrname" value="Send">
-                    </div>
-                    <div class="span4 offset8 ">
+                    @*<div class="span9">*@
+                        <input class="btn thanx home-send-btn" onclick="sendQuestion()" type="button" name="usrname" value="Send" style="float:right;margin-right:0%">
+                    @*</div>*@
+                    @*<div class="span4 offset8 ">
                         <label class="home-lblcnt" id="count" style="float:right">0/200</label>
-                    </div>
+                    </div>*@
                 </div>
             </div>
         </div>
         <div class="row-fluid visible-phone">
             <div class="span12">
                 <div>
-                    <p class="div-title-firstp div-details-margin-left">
+                    @*<p class="div-title-firstp div-details-margin-left">
                         Do you have any health related questions?
-                    </p>
-                    <p class="div-title-firsts div-details-margin-left">Ask a Doctor</p>
+                    </p>*@
+                    <p class="div-title-firsts div-details-margin-left">Ask Doctors</p>
                 </div>
                 <textarea class="input-block-level Questiontextarea questextarea div-askdoctor-padding textareadiv-margin" id="txtQuestion" onkeyup="Count(this)"
                           placeholder="Type your question here" rows="3" cols="10" maxlength="200" width="100%" onkeypress="return isEnterPress(event, this);" onpaste='return maxLengthPaste(this,"200");'></textarea>
@@ -44,7 +44,7 @@
                 <div class="span12 ">
                     <div class="span8 center_align btnpadding-right">
                         <input class="btn thanx home-send-btn" onclick="sendQuestion()" type="button" name="usrname" value="Send" style="float:right">
-                        <label class="home-send-btn count-position" id="countchar" style="float:right">0/200</label>
+                        @*<label class="home-send-btn count-position" id="countchar" style="float:right">0/200</label>*@
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                         {
                             <a href='@(t.NavigateUrl)' class='@(t.CssClass)' title='@(t.ToolTip + " "+t.TagWeight)'>@t.Text</a>
                         }
-                        <a href="~/topics" style="font-weight: normal;font-size:15px">view more...</a>
+                        <a href="~/topics" style="font-weight: normal;font-size:13px;float:right;margin-right:2%">view more...</a>
                     </p>
                 </div>
             </div>
@@ -76,7 +76,7 @@
         <div class="main-outter-padding">
             <div class="row-fluid">
                 <div class="span12">
-                    <p class="home_First_p textareadiv-margin" style="margin-left:0px !important; margin-bottom:0px !important">
+                    <p class="home_First_p textareadiv-margin" style="margin-left:0% !important; margin-bottom:4% !important;margin-top:4%">
                         Mirai Consult<sup>TM</sup> aims to support your health related decisions. Responses provided on Mirai Consult<sup>TM</sup>
                         do not substitute a physical consultation with your physician.  Mirai Consult<sup>TM</sup> is not to be used for medical emergencies.
                     </p>
