--- a/MiraiConsultMVC/Views/Home/topicdetails.cshtml
+++ b/MiraiConsultMVC/Views/Home/topicdetails.cshtml
@@ -15,9 +15,14 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     {
-        <div class="custom-central-div">
+        <div class="custom-central-div">          
             <div class="row-fluid">
-                <div style="margin-top:5%">
+                <div style="margin-top:8%">
+                    <div class='row-fluid'>
+                        <div class="span12">
+                            <label class="finddoc-title">Relevant Questions : @ViewBag.tag</label>
+                        </div>
+                    </div>
                     <div class="margin_bottom">
                         @if (Model != null && (Model.ToList().Count != 0))
                         {
