--- a/MiraiConsultMVC/Views/Home/topics.cshtml
+++ b/MiraiConsultMVC/Views/Home/topics.cshtml
@@ -25,20 +25,21 @@
                 Topics
             </div>
         </div>
-        <div class="content_border find-Doc-gbColor divmargin_bottom" style="padding-left:20px;">
+        <div class="content_border topics-bg-color divmargin_bottom" style="padding-left:20px;">
             <div class="row-fluid">
-                    <div class="span12">
-                        <div class="control-group" id="divTags">
-                            <p class="tagcloud">
-                                @foreach (var t in Model)
-                                {
-                                    <a href='@(t.NavigateUrl)' class='@(t.CssClass)' title='@(t.ToolTip + " "+t.TagWeight)'>@t.Text</a>
-                                }
-                            </p>
+                <div class="span12">
+                    <div class="control-group" id="divTags">
+                        <p class="tagcloud">
+                            @foreach (var t in Model)
+                            {
+                                <a href='@(t.NavigateUrl)' class='@(t.CssClass)' title='@(t.ToolTip + " "+t.TagWeight)'>@t.Text</a>
+                            }
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 <script type="text/javascript">
