Fixed UI issue on report

--- a/MiraiConsultMVC/Views/admin/Report.cshtml
+++ b/MiraiConsultMVC/Views/admin/Report.cshtml
@@ -77,13 +77,13 @@
                             id="report-doctor-list" style="table-layout:fixed">
                         <thead>
                             <tr>
-                                <th style="width: 20%" class="table-heading-color">
+                                <th style="width: 20%; word-wrap: break-word;" class="table-heading-color">
                                     <b>Doctor</b>
                                 </th>
-                                <th class="table-heading-color">
+                                <th class="table-heading-color" style="word-wrap: break-word;">
                                     <b>City</b>
                                 </th>
-                                <th class="table-heading-color">
+                                <th class="table-heading-color" style="word-wrap: break-word;">
                                     <b>Location</b>
                                 </th>
                                 <th class="reporttablewidth table-heading-color" style="word-wrap: break-word; width: 15%;">
