--- a/MiraiConsultMVC/Views/Shared/Error.cshtml
+++ b/MiraiConsultMVC/Views/Shared/Error.cshtml
@@ -3,18 +3,18 @@
 <div class="row-fluid">
     <div class="span12 main-outter-padding">
         <div class="row-fluid">
-            <div id="controlcontainer" class="wrapper-bordered " visible="true" runat="server">
+            <div id="controlcontainer" class="wrapper-bordered">
                 <div class="row-fluid">
                     <div class="span12">
                        @if (!String.IsNullOrEmpty(ViewBag.Msg) && ViewBag.success == "true")
                     {
                         <div id="message" class="alert alert-success">
-                            <label id="lblError" class="success_message_color msg_font">@ViewBag.Msg</label>
+                            <label id="lblSuccess" class="success_message_color msg_font">@ViewBag.Msg</label>
                         </div>
                     }
                     @if (!String.IsNullOrEmpty(ViewBag.Msg) && ViewBag.success == "false") {
                         <div id="message" class="alert alert-error">
-                            <label id="lblError" class="error_message_color msg_font">@ViewBag.Msg</label>
+                            <label id="lblError" class="error_message_color msg_font" >@ViewBag.Msg</label>
                                </div>
                     }
                     </div>
@@ -29,7 +29,7 @@
                     <div class="span12">
                         <div class="control-group" style="width:95%;">
                                 <p class="custom_p" id="appExceptionMsg"
-                                   align="left" runat="server">
+                                   align="left">
                                     Sorry, we have encountered an application error! We apologise for the inconvenience.
                                     <br />
                                     Please leave your login ID and take a moment to describe the circumstances under
@@ -38,14 +38,14 @@
                                     This report will be sent to the Mirai Consult&#8482; team which will help them to troubleshoot
                                     and resolve this issue.
                                 </p>
-                                @Html.TextArea("name", "", new { @class = "custom_textarea", rows="2" ,cols="20"  })
+                                @Html.TextArea("name", "", new { @class = "custom_textarea", rows = "2", cols = "20", id = "ErrorDes" })
                         </div>
                     </div>
                 </div>
                 <div class="row-fluid">
                     <div class="span12">
-                        <input class="btn thanx gray-border" id="btnSend" type="submit" value="Send" />
-                        <a class="btn cancel gray-border" id="btnCancel" href="/" >Cancel</a>
+                        <input class="btn thanx gray-border" id="btnSend" type="submit" onclick="return validateData();"  value="Send" />
+                        <a class="btn cancel gray-border" id="btnCancel" href="/">Cancel</a>
                     </div>
                 </div>
 }
@@ -53,20 +53,31 @@
         </div>
     </div>
 </div>
+<input type="hidden" id="hdnErrorText" value="@ViewBag.Msg" />
 <script language="javascript" type="text/javascript">
-    function validationData() {
+    function validateData() {
         var value = $('#ErrorDes').val();
-        if ($('#ErrorDes').val() == "") {
-            $('#message').show();
-            document.getElementById("lblMessage").className = "alert alert-error";
-            document.getElementById("lblMessage").innerHTML = "Please enter description";
+        if ($('#ErrorDes').val().trim() == "") {
+            $('#lblErrorValidation').show();
+            $('#lblError').text('Please enter description')
             return false;
         }
         else {
             return true;
         }
     }
-
+    $(function () {
+        var errorText = $("#hdnErrorText").val();
+        if (errorText == "Error details has been sent successfully.") {
+            $('#btnSend').hide();
+            $('#ErrorDes').hide();
+            $('#appExceptionMsg').hide();
+            $("#btnCancel").html('Continue');
+        }
+    });
+    function hide()
+    {       
+    }
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
             (i[r].q = i[r].q || []).push(arguments)
