Fixed all issue which mention in jira ticked mira-692(Mostly related to mozilla browser UI issues).

--- a/MiraiConsultMVC/Views/admin/QuestionList.cshtml
+++ b/MiraiConsultMVC/Views/admin/QuestionList.cshtml
@@ -40,7 +40,7 @@
                         Unassigned Questions
                         &nbsp;&nbsp;
                         <img src="../Content/image/a-question.png" class="icon_Stethoscope" />
-                        Assigned questions
+                        Assigned Questions
                     </div>
                 </div>
             </div>
