--- a/MiraiConsultMVC/Views/Feed/Feed.cshtml
+++ b/MiraiConsultMVC/Views/Feed/Feed.cshtml
@@ -8,6 +8,9 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     {
+        <div class="span12">
+            <div class="answer-title">Answers </div>
+        </div>
         <div class="custom-central-div">
             <div class="row-fluid">
                 <div class="span12">
