--- a/MiraiConsultMVC/Views/admin/ManageTag.cshtml
+++ b/MiraiConsultMVC/Views/admin/ManageTag.cshtml
@@ -11,7 +11,7 @@
     <div class="span12 main-outter-padding">
         <div class="row-fluid">
             <div class="span12 finddoc-title">
-                Manage tags
+                Manage Tags
             </div>
         </div>
         <div class="content_border find-Doc-gbColor divmargin_bottom" style="padding-left:20px;">
