--- a/MiraiConsultMVC/Views/Shared/Error.cshtml
+++ b/MiraiConsultMVC/Views/Shared/Error.cshtml
@@ -45,7 +45,7 @@
                                     This report will be sent to the Mirai Consult&#8482; team which will help them to troubleshoot
                                     and resolve this issue.
                                 </p>
-                                @Html.TextArea("name", "", new { @class = "custom_textarea", rows = "2", cols = "20", @id = "ErrorDes" })
+                                @Html.TextArea("name", "", new { @class = "custom_textarea", rows = "2", cols = "20", id = "ErrorDes" })
                         </div>
                     </div>
                 </div>
